show user on each tweet

--- a/twitterclone/tweets/templates/tweetlist.html
+++ b/twitterclone/tweets/templates/tweetlist.html
@@ -5,7 +5,7 @@
     {% for tweet in latest_tweet_list %}
         <li>
                 {{ tweet.body }} 
-                - tweeted on {{tweet.time}}
+                - tweeted by {{tweet.twitter_user}} on {{tweet.time}}
         </li>
     {% endfor %}
     </ul>
