--- a/twitterclone/templates/twitteruser.html
+++ b/twitterclone/templates/twitteruser.html
@@ -1,6 +1,6 @@
-<h1>{{ twitteruser.name }}</h1>
-<p>{{ twitteruser.bio }}</p>
-<h4>Tweets:</h4>
+<h1>User: {{ twitteruser.name }}</h1>
+<p>Bio: {{ twitteruser.bio }}</p>
+<h4>{{ twitteruser.name }}'s Tweets:</h4>
 <ul>
     {% for tweet in twitteruser_tweet_list %}
         <li><a href="{% url 'detail' tweet.id %}">{{ tweet.body }}</a></li>
