--- a/twitterclone/templates/base.html
+++ b/twitterclone/templates/base.html
@@ -2,6 +2,7 @@
 {% if user.is_authenticated %}
 <p><a href="logout/">logout</a></p>
 <p><a href="tweetform/">tweet</a></p>
+<p><a href="{% url 'twitteruser' request.user.id %}">profile</a></p>
 {% else %}
 <p><a href="login/">login</a></p>
 <p><a href="{% url 'signup' %}">signup</a></p>
