--- a/twitterclone/templates/base.html
+++ b/twitterclone/templates/base.html
@@ -10,3 +10,6 @@
 {% block tweets %}
     {% include "tweetlist.html" %}
 {% endblock tweets %}
+{% block users %}
+    {% include "userlist.html" %}
+{% endblock users %}
