--- a/twitterclone/templates/userlist.html
+++ b/twitterclone/templates/userlist.html
@@ -1,5 +1,5 @@
 {% block users %}
-<h1>users:</h1>
+<h1>users to follow:</h1>
 {% if twitter_user_list %}
     <ul>
     {% for user in twitter_user_list %}
