add users to follow/unfollow list

--- a/twitterclone/templates/base.html
+++ b/twitterclone/templates/base.html
@@ -10,6 +10,6 @@
 {% block tweets %}
     {% include "tweetlist.html" %}
 {% endblock tweets %}
-{% block users %}
+{% block users_to_follow %}
     {% include "userlist.html" %}
-{% endblock users %}
+{% endblock users_to_follow %}
