--- a/twitterclone/templates/tweetlist.html
+++ b/twitterclone/templates/tweetlist.html
@@ -1,5 +1,5 @@
 {% block tweets %}
-<h1>Tweets:</h1>
+<h1>Your tweet feed:</h1>
 {% if follower_tweet_list %}
     <ul>
     {% for tweet in follower_tweet_list %}
