--- a/twitterclone/templates/twitteruser.html
+++ b/twitterclone/templates/twitteruser.html
@@ -1,7 +1,7 @@
 <h1>User: {{ twitteruser.name }}</h1>
 <p>Bio: {{ twitteruser.bio }}</p>
 <p>Tweet count: {{ twitteruser_tweet_list.count }}</p>
-<p>Follower count: {{ twitteruser.followers.count }}</p>
+<p>Number of users you are following: {{ twitteruser.followers.count }}</p>
 <h4>{{ twitteruser.name }}'s Tweets:</h4>
 <ul>
     {% for tweet in twitteruser_tweet_list %}
